# nrengine-svn

./: configure.in  nrEngine.pc.in
Plugins/: Makefile.in
Plugins/rdtscTimeSource/: Cpu.cpp  Makefile.in
Testing/: Makefile  test.cpp
nrEngine/: Makefile.am  Makefile.in  TODO  acinclude.m4  aclocal.m4  configure  configure.in
nrEngine/Bindings/: Makefile.am  Makefile.in  README
nrEngine/Bindings/glfw/: Binding.cpp  Binding.h  Event.h  Makefile.am  Makefile.in  Task.cpp  Task.h
nrEngine/Bindings/glfw/win32-devcpp/: Makefile.win  glfwBinding.dev
nrEngine/Plugins/: Makefile.am  Makefile.in
nrEngine/Plugins/glfwFramework/: Makefile.in  Plugin.cpp  glfwTask.cpp  glfwTask.h
nrEngine/Plugins/rdtscTimeSource/: Cpu.cpp  Cpu.h  Makefile.in
nrEngine/Plugins/rdtscTimeSource/win32-devcpp/: Makefile.win  rdtscTimeSource.dev  rdtscTimeSource.layout
nrEngine/Testing/: Makefile  test.cpp
nrEngine/doc/: Makefile.in  config.doxy
nrEngine/doc/dias/: Makefile.in
nrEngine/include/: EventManager.h  IDator.h  ISingletonTask.h  Kernel.h  KeySym.h  Makefile.in  NameValuePairs.h  Platform.h  Profiler.h  ResourceHolder.h  ResourceSystem.h  Script.h  ScriptEngine.h  ScriptLoader.h  SmartPtr.h  Timer.h
nrEngine/include/events/: EngineEvent.h
nrEngine/nrEngine/: Makefile.in  nrEngine.h
nrEngine/nrEngine/include/: Binding.h  Engine.h  Event.h  EventActor.h  EventChannel.h  EventManager.h  FileStream.h  FileSystemManager.h  GetTime.h  ISingleton.h  IStream.h  ITask.h  IThread.h  Kernel.h  Log.h  Makefile.am  Makefile.in  Platform.h  Plugin.h  Prerequisities.h  Resource.h  ResourceLoader.h  ResourceManager.h  Result.h  TimeSource.h  VariadicArgument.h  config.h.in  nrEngine.h
nrEngine/nrEngine/include/events/: KernelEvent.h  KernelTaskEvent.h  Makefile.am  Makefile.in
nrEngine/nrEngine/src/: Engine.cpp  EventChannel.cpp  EventManager.cpp  Exception.cpp  GetTime.cpp  ITask.cpp  IThread.cpp  Kernel.cpp  Log.cpp  Makefile.am  Makefile.in  Profiler.cpp  ResourceManager.cpp  StdHelpers.cpp  Timer.cpp
nrEngine/nrEngine/src/events/: KernelEvent.cpp
nrEngine/src/: Event.cpp  EventActor.cpp  EventChannel.cpp  FileStream.cpp  FileStreamLoader.cpp  IFileSystem.cpp  IStream.cpp  Kernel.cpp  Log.cpp  Makefile.in  Plugin.cpp  PluginLoader.cpp  Resource.cpp  ResourceHolder.cpp  ScriptEngine.cpp  ScriptLoader.cpp  VariadicArgument.cpp
nrEngine/win32-devcpp/: Makefile.win  nrEngine.dev  nrEngine_private.h  nrEngine_private.rc  nrEngine_private.res
theGame/: Makefile  Makefile.win  thGame.dev  theGame
theGame/src/: App.cpp  App.h  Base.h  GameTask.cpp  GameTask.h  Main.cpp  Makefile  SoundTask.cpp  SoundTask.h
trunk/: README  acinclude.m4  configure
trunk/Plugins/rdtscTimeSource/: Makefile.am  Plugin.cpp
trunk/Plugins/rdtscTimeSource/.deps/: Cpu.Plo  Plugin.Plo  TimeSource.Plo
trunk/doc/: Makefile.am  Makefile.in
trunk/nrEngine/: Makefile.in
trunk/nrEngine/include/: Clock.h  EventActor.h  EventType.h  Exception.h  FileStreamLoader.h  IFileSystem.h  IScript.h  ISingleton.h  ITimeObserver.h  Makefile.am  PluginLoader.h  ResourcePtr.h  Result.h  StdHelpers.h  config.h.in
trunk/nrEngine/include/events/: KernelEvent.h
trunk/nrEngine/src/: Clock.cpp  Engine.cpp  EventManager.cpp  IScript.cpp  ITask.cpp  Makefile.am  Profiler.cpp  ResourceLoader.cpp  ResourcePtr.cpp  Script.cpp  TimeSource.cpp
