SUBDIRS = events

pkgincludedir = $(includedir)/@PACKAGE@
pkginclude_HEADERS =	Kernel.h\
			Engine.h\
			nrEngine.h\
			Log.h\
			Exception.h\
			ISingleton.h\
			Dator.h\
			ISingletonTask.h\
			ITask.h\
			KeySym.h\
			StdHeaders.h\
			Prerequisities.h\
			config.h\
			Platform.h\
			Priority.h\
			NameValuePairs.h\
			Clock.h\
			TimeSource.h\
			Timer.h\
			ITimeObserver.h\
			StdHelpers.h\
			Result.h\
			Profiler.h\
			ResourceHolder.h\
			ResourceManager.h\
			ResourcePtr.h\
			ResourceLoader.h\
			ResourceSystem.h\
			Resource.h\
			Plugin.h\
			PluginLoader.h\
			IStream.h\
			ScriptEngine.h\
			ScriptLoader.h\
			Script.h\
			IScript.h\
			VariadicArgument.h\
			EventManager.h\
			EventChannel.h\
			EventActor.h\
			Event.h\
			EventFactory.h\
			SmartPtr.h

 
