lib_LTLIBRARIES = libnrEngine.la

# Main classes of the engine
libnrEngine_la_SOURCES =\
			Engine.cpp\
			Kernel.cpp\
			ITask.cpp\
			Log.cpp\
			Exception.cpp\
			Clock.cpp\
			Timer.cpp\
			TimeSource.cpp\
			StdHelpers.cpp\
			Profiler.cpp\
			ResourceHolder.cpp\
			ResourcePtr.cpp\
			ResourceLoader.cpp\
			ResourceManager.cpp\
			Resource.cpp\
			Plugin.cpp\
			PluginLoader.cpp\
			IStream.cpp\
			FileStream.cpp\
			FileStreamLoader.cpp\
			IFileSystem.cpp\
			IScript.cpp\
			Script.cpp\
			ScriptLoader.cpp\
			ScriptEngine.cpp\
			VariadicArgument.cpp\
			EventManager.cpp\
			EventChannel.cpp\
			EventActor.cpp\
			Event.cpp\
			events/KernelEvent.cpp

libnrEngine_la_LDFLAGS = $(SHARED_FLAGS) -version-info @NRENGINEMAIN_VERSION_INFO@

#libnrEngine_la_LDFLAGS =  -version-info @NRENGINEMAIN_VERSION_INFO@

